# MisterMassive

./: .gitignore  CMakeLists.txt  MisterMassive.sln  README.md
MisterMassive/: MisterMassive.vcxproj  MisterMassive.vcxproj.filters  inputs.cpp  main.cpp  massive.cpp  massive.h  master.cpp  mistermassive.h
src/: element.h  main.cpp  massive.cpp  massive.h  matrix.h  mistermassive.cpp  mistermassive.h  operations.cpp  position.h  service.cpp  service.h  size.h  utils.cpp  utils.h  vars.h
